<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleTweets</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline">Home Timeline</string>
    <string name="text_body">Description of a tweet.</string>
    <string name="user_name">Tweet User</string>
    <string name="tweet_body">Body of the tweet.</string>
    <string name="compose">Compose</string>
    <string name="compose_tweet">Compose Tweet</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_Tweet">Tweet</string>
    <string name="img_ProfilePic" />
    <string name="user_handle">UserHandle</string>
    <string name="compose_tweet_text">Your tweet here...</string>
    <string name="char_count">140</string>
    <string name="profile_image">Profile Image</string>
    <string name="name">Name</string>
    <string name="tagline">Tagline</string>
    <string name="followers">5 Followers</string>
    <string name="following">5 Following</string>

</resources>