<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_compose_tweet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codepath.apps.mysimpletweets.activities.ComposeTweetActivity">


    <Button
        android:text="@string/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/btCancel" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btCancel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/btTweet"
        android:textColor="@android:color/white"
        android:text="@string/btn_Tweet"
        android:background="@android:color/holo_blue_light" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/ic_launcher"
        android:layout_below="@+id/btCancel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="23dp"
        android:id="@+id/ivProfileImage"
        android:contentDescription="@string/img_ProfilePic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ivProfileImage"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:layout_marginBottom="12dp"
        android:id="@+id/tvUserHandle"
        tools:text="@string/user_handle"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_below="@+id/ivProfileImage"
        android:layout_alignLeft="@+id/ivProfileImage"
        android:layout_alignStart="@+id/ivProfileImage"
        android:layout_marginTop="12dp"
        android:id="@+id/etComposeTweet"
        tools:hint="@string/compose_tweet_text" />
</RelativeLayout>
