<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="10dp">

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:srcCompat="@android:drawable/ic_menu_report_image"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/ivProfileImage"
        android:background="@android:color/holo_blue_light"
        android:contentDescription="@string/tweet_body"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"/>

    <TextView
        android:text="@string/user_name"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:id="@+id/tvUserName"
        tools:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"/>

    <TextView
        android:text="@string/text_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvBody"
        android:ellipsize="end"
        android:autoLink="all"
        android:linksClickable="true"
        android:textColorLink="@color/blue"
        android:layout_below="@id/tvUserName"
        android:layout_alignBottom="@+id/ivProfileImage"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:layout_toEndOf="@+id/ivProfileImage" />

    <TextView
        android:id="@+id/tvScreenName"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_toEndOf="@+id/tvUserName"
        android:layout_toRightOf="@+id/tvUserName" />

    <TextView
        android:id="@+id/tvCreatedAt"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_toEndOf="@+id/tvScreenName"
        android:layout_toRightOf="@+id/tvScreenName" />

</RelativeLayout>